# VHostScan

./: README.md  pyproject.toml  requirements.txt
VHostScan/: VHostScan.py
VHostScan/lib/: input.py
VHostScan/lib/core/: discovered_host.py  virtual_host_scanner.py
VHostScan/lib/helpers/: file_helper.py  output_helper.py
