[project]
name = "vhostscan"
version = "0.1.0"
description = "A virtual host scanner that performs reverse lookups, can be used with pivot tools, detect catch-allscenarios, aliases and dynamic default pages."
authors = [
    {name = "codingo",email = "codingo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython (>=2.7.0,<3.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "simplejson (>=3.20.1,<4.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "setuptools (>=78.0.2,<79.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
